--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,8 @@
 services:
   api:
-    build: 
-      context: .
-      dockerfile: docker/Dockerfile
+    # Use pre-built image from Docker Hub (no build on VPS)
+    # Image is built and pushed by GitHub Actions workflow
+    # The deployment script will pull the latest image before starting
     image: kamilzafar/ict_agent:latest
     container_name: ict_agent_api
     ports:
