--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,8 @@ services:
     # Use pre-built image from Docker Hub (no build on VPS)
     # Image is built and pushed by GitHub Actions workflow
     # The deployment script will pull the latest image before starting
-    image: kamilzafar/ict_agent:latest
+    # Supports DOCKER_IMAGE_TAG environment variable for SHA-tagged deployments
+    image: ${DOCKER_IMAGE_TAG:-kamilzafar/ict_agent:latest}
     container_name: ict_agent_api
     ports:
       - "${API_PORT:-8009}:8009"  # Expose API port for OAuth2 callbacks
