Remove admin template editor and related endpoints
Eliminated all code, models, and endpoints related to the admin template editor from app.py, including session management, static admin UI serving, and template CRUD operations. Updated deployment workflow and Docker configuration to clarify that config files are now sourced from the Docker image and not mounted as a volume, ensuring prompt.txt and other config files remain up-to-date with each deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,6 +108,8 @@ jobs:
             echo "=== Ensuring data directories exist ==="
             # Ensure data directories exist with proper permissions
             # memory_db needs 777 for SQLite checkpoints.db writes
+            # Note: config/ is NOT created here - config files come from Docker image
+            # This ensures prompt.txt and other config files are always up-to-date
             mkdir -p memory_db logs credentials
             chmod -R 777 memory_db || true
             chmod -R 755 logs || true
