--- a/.env.example
+++ b/.env.example
@@ -100,7 +100,8 @@ CHROMA_DB_PATH=/app/sheets_index_db
 # ============================================================================
 
 # OpenAI model name (default: gpt-4.1-mini)
-# Options: gpt-4.1-mini, gpt-4o, gpt-4-turbo, gpt-3.5-turbo, etc.
+# Options: gpt-4.1-mini (recommended), gpt-4o, gpt-4-turbo, gpt-3.5-turbo, etc.
+# Note: gpt-4.1-mini has 128k context window and supports tool calling
 MODEL_NAME=gpt-4.1-mini
 
 # Model temperature (0.0-2.0, default: 0.7)
