Add recursion limit and improve tool call safety
Introduces a RECURSION_LIMIT environment variable and propagates it through the agent initialization and Docker config. Enhances the agent's internal logic to enforce maximum tool calls and agent iterations per turn, with detailed safety checks to prevent infinite loops and redundant tool calls. Updates the prompt to instruct efficient tool usage and adds a comprehensive test script for the Supabase lead append tool.

--- a/.env.example
+++ b/.env.example
@@ -120,6 +120,11 @@ MEMORY_DB_PATH=/app/memory_db
 # Number of conversation turns before summarizing (default: 10)
 SUMMARIZE_INTERVAL=10
 
+# Graph recursion limit (default: 50)
+# Maximum number of graph node executions before timeout
+# Increase if agent makes many sequential tool calls
+RECURSION_LIMIT=50
+
 # ============================================================================
 # API Server Configuration
 # ============================================================================
