--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,6 +28,7 @@ services:
       - GOOGLE_SHEETS_LEADS_SHEET_NAME=${GOOGLE_SHEETS_LEADS_SHEET_NAME:-Leads}
       # LangChain/LangGraph Settings
       - SUMMARIZE_INTERVAL=${SUMMARIZE_INTERVAL:-10}
+      - RECURSION_LIMIT=${RECURSION_LIMIT:-50}
       - MODEL_NAME=${MODEL_NAME:-gpt-4.1-mini}
       - TEMPERATURE=${TEMPERATURE:-0.7}
     
