--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,11 @@ dependencies = [
     "supabase>=2.0.0",
     "langchain-redis>=0.1.0",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+    "pytest-asyncio>=0.23.0",
+]
