Add Sentry integration and test/config files
Initialize Sentry (sentry_sdk) in app.py with FastAPI/Starlette/Logging integrations and a custom traces_sampler; load env vars early and add Sentry capture in the global exception handler and chat flow. Add a /debug/sentry endpoint and expose sentry_enabled in health checks. Update .env.example with SENTRY_DSN, TRACE/PROFILE sample rates and APP_VERSION. Add extra local CLI/test entries to .claude/settings.local.json. Add large legacy prompt file (config/prompt_OLD_BEFORE_GPT41_REWRITE.txt), course_details_rows.csv, and a new test tests/test_supabase_service_leads.py; update tests/conftest.py and pyproject.toml accordingly.

--- a/.env.example
+++ b/.env.example
@@ -200,3 +200,25 @@ ADMIN_USERNAME=ictxzensbot
 ADMIN_PASSWORD=ictxzensbot
 
 # Note: Sessions never expire (persist until logout or server restart)
+
+# ============================================================================
+# Sentry Error Tracking Configuration
+# ============================================================================
+# Sign up at: https://sentry.io
+# Create a new project and get your DSN from Project Settings > Client Keys
+
+# Sentry DSN (Data Source Name) - Leave empty to disable Sentry
+# Format: https://[key]@[org].ingest.sentry.io/[project-id]
+SENTRY_DSN=
+
+# Performance monitoring sample rate (0.0 to 1.0)
+# 1.0 = capture 100% of transactions (expensive)
+# 0.1 = capture 10% of transactions (recommended for production)
+SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# Profiling sample rate (0.0 to 1.0)
+# Captures detailed performance profiles
+SENTRY_PROFILES_SAMPLE_RATE=0.1
+
+# App version for release tracking (used in Sentry releases)
+APP_VERSION=1.0.0
